@@ -1,0 +1,238 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml-stylesheet type='text/xsl' href='../../mesmer2.xsl' media='other'?>
+<?xml-stylesheet type='text/xsl' href='../../mesmer1.xsl' media='screen'?>
+<me:mesmer xmlns="http://www.xml-cml.org/schema" xmlns:me="http://www.chem.leeds.ac.uk/mesmer">
+  <title>isopropyl decomposition</title>
+<!--*** The atom coordinates and the hindered rotor properties are probably not correct ***-->
+  <moleculeList>
+    <molecule  id="i-propyl" spinMultiplicity="2">
+      <atomArray>
+        <atom id="a1" elementType="C" x3="0.966052" y3="0.002978" z3="-0.029010"/>
+        <atom id="a2" elementType="C" spinMultiplicity="2" x3="2.433925" y3="0.149426" z3="-0.224592"/>
+        <atom id="a3" elementType="C" x3="3.075273" y3="1.476243" z3="-0.017961"/>
+        <atom id="a4" elementType="H" x3="0.699350" y3="-1.057168" z3="0.019141"/>
+        <atom id="a5" elementType="H" x3="0.423024" y3="0.456961" z3="-0.862584"/>
+        <atom id="a6" elementType="H" x3="0.645705" y3="0.474625" z3="0.904160"/>
+        <atom id="a7" elementType="H" x3="2.969607" y3="-0.612779" z3="-0.779251"/>
+        <atom id="a8" elementType="H" x3="2.717680" y3="1.946642" z3="0.902183"/>
+        <atom id="a9" elementType="H" x3="2.861797" y3="2.137798" z3="-0.862195"/>
+        <atom id="a10" elementType="H" x3="4.160234" y3="1.358689" z3="0.061677"/>
+      </atomArray>
+      <bondArray>
+        <bond id="b1" atomRefs2="a1 a2" order="1"/>
+        <bond id="b2" atomRefs2="a2 a3" order="1"/>
+        <bond atomRefs2="a1 a4" order="1"/>
+        <bond atomRefs2="a1 a5" order="1"/>
+        <bond atomRefs2="a1 a6" order="1"/>
+        <bond atomRefs2="a2 a7" order="1"/>
+        <bond atomRefs2="a3 a8" order="1"/>
+        <bond atomRefs2="a3 a9" order="1"/>
+        <bond atomRefs2="a3 a10" order="1"/>
+      </bondArray>
+      <propertyList>
+        <property dictRef="me:ZPE">
+          <scalar units="cm-1">0.0</scalar>
+        </property>
+        <property dictRef="me:rotConsts">
+          <array units="cm-1">1.528 0.2645 0.2645</array>
+        </property>
+        <property dictRef="me:symmetryNumber">
+          <scalar>18</scalar>
+        </property>
+        <property dictRef="me:vibFreqs">
+          <array units="cm-1">
+            3052.0 2968.2 2968.2 2967.7 2920.0 2887.0 2850.0 1468.0 1464.0 1462.0
+            1440.0 1378.0 1338.0 1292.0 1200.0 1165.0 1053.8  921.7  879.0  748.1
+            369.2  364.0  300.0  300.0
+          </array>
+          <!-- The last two frequencies approximately represent internal motion.-->
+        </property>
+        <property dictRef="me:MW">
+          <scalar>43</scalar>
+        </property>
+        <property dictRef="me:epsilon">
+          <scalar>275.0</scalar>
+        </property>
+        <property dictRef="me:sigma">
+          <scalar>4.94</scalar>
+        </property>
+        <property dictRef="me:deltaEDown">
+          <scalar units="cm-1" lower="220" upper="240" stepsize="10">230.0</scalar>
+        </property>
+        <property dictRef="me:spinMultiplicity">
+          <scalar>2</scalar>
+        </property>
+      </propertyList>
+
+      <!--No explicit main DOSCMethod. Default is inserted-->
+      <me:ExtraDOSCMethod>HinderedRotorA
+        <bondRef>b1</bondRef>
+        <me:vibFreq units="cm-1">300</me:vibFreq>
+        <me:barrierZPE units="kJ/mol">12.4</me:barrierZPE>
+        <me:periodicity>3</me:periodicity>
+      </me:ExtraDOSCMethod>
+
+      <me:ExtraDOSCMethod name="HinderedRotorA">
+        <bondRef>b2</bondRef>
+        <me:vibFreq units="cm-1">300</me:vibFreq>
+        <me:barrierZPE units="kJ/mol">12.4</me:barrierZPE>
+        <me:periodicity>3</me:periodicity>
+      </me:ExtraDOSCMethod>
+    
+    </molecule>
+    
+    <molecule  id="propene">
+      <atomArray>
+        <atom id="a1" elementType="C" x3="0.988676" y3="-0.007015" z3="0.009024"/>
+        <atom id="a2" elementType="C" x3="2.480715" y3="0.029994" z3="0.017128"/>
+        <atom id="a3" elementType="C" x3="3.189999" y3="1.164918" z3="-0.015595"/>
+        <atom id="a4" elementType="H" x3="0.642131" y3="-1.043107" z3="-0.059766"/>
+        <atom id="a5" elementType="H" x3="0.586064" y3="0.536696" z3="-0.851368"/>
+        <atom id="a6" elementType="H" x3="0.584570" y3="0.421419" z3="0.931343"/>
+        <atom id="a7" elementType="H" x3="3.003327" y3="-0.923524" z3="0.049834"/>
+        <atom id="a8" elementType="H" x3="2.705573" y3="2.136657" z3="-0.045236"/>
+        <atom id="a9" elementType="H" x3="4.274803" y3="1.143745" z3="-0.008819"/>
+      </atomArray>
+      <bondArray>
+        <bond id="b1" atomRefs2="a1 a2" order="1"/>
+        <bond atomRefs2="a2 a3" order="2"/>
+        <bond atomRefs2="a1 a4" order="1"/>
+        <bond atomRefs2="a1 a5" order="1"/>
+        <bond atomRefs2="a1 a6" order="1"/>
+        <bond atomRefs2="a2 a7" order="1"/>
+        <bond atomRefs2="a3 a8" order="1"/>
+        <bond atomRefs2="a3 a9" order="1"/>
+      </bondArray>
+      <propertyList>
+        <property dictRef="me:ZPE">
+          <scalar units="cm-1">12275.0</scalar>
+        </property>
+        <property dictRef="me:rotConsts">
+          <array units="cm-1">
+            0.3690 0.0808 0.0737
+          </array>
+        </property>
+        <property dictRef="me:symmetryNumber">
+          <scalar>2</scalar>
+        </property>
+        <property dictRef="me:vibFreqs">
+          <array units="cm-1">
+            3091.0 3022.0 2991.0 2973.0 2952.8 2931.0 1652.8 1458.5 1442.5 1414.0
+            1378.0 1298.0 1177.5 1044.7  990.0  934.5  919.0  912.0  575.2  428.0
+            300.0
+          </array>
+          <!-- The last frequency approximately represent internal motion.-->
+        </property>
+        <property dictRef="me:MW">
+          <scalar>42</scalar>
+        </property>
+        <property dictRef="me:spinMultiplicity">
+          <scalar>1</scalar>
+        </property>
+      </propertyList>
+
+      <me:DOSCMethod>Classical rotors</me:DOSCMethod>
+      <me:ExtraDOSCMethod>HinderedRotorA
+        <bondRef>b1</bondRef>
+        <me:vibFreq units="cm-1">300</me:vibFreq>
+        <me:barrierZPE units="kJ/mol">12.4</me:barrierZPE>
+        <me:periodicity>3</me:periodicity>
+      </me:ExtraDOSCMethod>
+
+    </molecule>
+    
+    <molecule id="H">
+      <atom elementType="H"/>
+      <propertyList>
+        <property dictRef="me:ZPE">
+          <scalar units="cm-1">0.0</scalar>
+        </property>
+        <property dictRef="me:MW">
+          <scalar>1.0</scalar>
+        </property>
+      </propertyList>
+      <property dictRef="me:spinMultiplicity">
+        <scalar>1</scalar>
+      </property>
+    </molecule>
+
+    <molecule id="He">
+      <atom elementType="He"/>
+      <propertyList>
+        <property dictRef="me:epsilon">
+          <scalar>10.0</scalar>
+        </property>
+        <property dictRef="me:sigma">
+          <scalar>2.55</scalar>
+        </property>
+        <property dictRef="me:MW">
+          <scalar>4.0</scalar>
+        </property>
+      </propertyList>
+    </molecule>
+
+  </moleculeList>
+
+  <reactionList>
+
+    <reaction id="R1">
+      <reactant>
+        <molecule ref="i-propyl"  me:type="modelled" />
+      </reactant>
+
+      <product>
+        <molecule ref="propene"  me:type="sink" />
+      </product>
+
+      <product>
+        <molecule ref="H"  me:type="sink" />
+      </product>
+
+      <me:MCRCMethod>MesmerILT</me:MCRCMethod>
+      <me:preExponential>6.00e-12</me:preExponential>
+      <me:activationEnergy  units="cm-1" reverse="true">546.0</me:activationEnergy>
+      <me:TInfinity>1.0</me:TInfinity>
+      <me:nInfinity>0.0</me:nInfinity>
+
+    </reaction>
+
+  </reactionList>
+
+  <!-- Data taken from Seakins et al, J. Phys. Chem. Vol. 97, p. 4450 (1993). -->
+  <me:conditions>
+    <me:bathGas>He</me:bathGas>
+    <me:PTs>
+      <me:PTpair me:units="PPCC" me:P="30.0e16" me:T="720.">
+        <me:experimentalRate ref1="i-propyl" ref2="i-propyl" error="1.0">41.5</me:experimentalRate>
+      </me:PTpair>
+      <me:PTpair me:units="PPCC" me:P="30.1e16" me:T="730.">
+        <me:experimentalRate ref1="i-propyl" ref2="i-propyl" error="1.0">51.1</me:experimentalRate>
+      </me:PTpair>
+      <me:PTpair me:units="PPCC" me:P="18.0e16" me:T="740.">
+         <me:experimentalRate ref1="i-propyl" ref2="i-propyl" error="1.0">55.5</me:experimentalRate>
+      </me:PTpair>
+    </me:PTs>
+  </me:conditions>
+
+  <me:modelParameters>
+    <me:grainSize units="cm-1">100</me:grainSize>
+    <!--<me:numberOfGrains> 500 </me:numberOfGrains>-->
+    <!--<me:maxTemperature>3000</me:maxTemperature>-->
+    <me:energyAboveTheTopHill>10.</me:energyAboveTheTopHill>
+  </me:modelParameters>
+
+  <me:control>
+    <!--<me:testDOS />-->
+    <!--<me:testMicroRates />-->
+    <!--<me:gridSearch />-->
+    <!--<me:printGrainDOS />-->
+    <!--<me:printCellDOS />-->
+    <!--<me:printReactionOperatorColumnSums />-->
+    <!--<me:printGrainkfE />-->
+    <!--<me:printGrainBoltzmann />-->
+    <!--<me:printGrainkbE />-->
+    <!--<me:printSpeciesProfile />-->
+    <me:eigenvalues>3</me:eigenvalues>
+  </me:control>
+
+</me:mesmer>
