@@ -470,7 +470,7 @@ namespace mesmer
           string attrtext(pattr);
           pnNode->SetAttribute("default", attrtext);
           if(attrtext=="true")
-            cinfo << "The default value of " << name << " was used.\n";
+            cinfo << "The default value of " << name << " was used." << endl;
           else
             cerr << "No value of " << name << " was supplied and the default value " << attrtext << endl;
           return true;       
